--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ aw-watcher-ask = "aw_watcher_ask.cli:app"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+click = ">=7.1.1, <7.2.0"
 typer = "^0.3.2"
 aw-client = "^0.5.4"
 croniter = "^1.0.15"
